tests/types/errors/range_bound_float.mochi
// Inference (1805): for ... in range requires int bounds.
for i in 0..2.5 {
  print(i)
}
